k8s/solid-crs/solid-crs-id-proxy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solid-crs-id-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: solid-crs-id-proxy
  template:
    metadata:
      labels:
        app: solid-crs-id-proxy
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/solid-crs-id-proxy
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr
