k8s/solid-crs/solid-crs-pods-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: solid-crs-pods
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solid-crs-pods
  serviceName: solid-crs-pods
  template:
    metadata:
      labels:
        app: solid-crs-pods
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/solid-crs-pods
          ports:
            - containerPort: 80
          command: ["node", "./node_modules/.bin/community-solid-server"]
          args: ["-l", "silly", "-p", "80", "-b", "https://pods.netwerkdigitaalerfgoed.nl", "-c", "config/file.json", "-f", "/data"]
          volumeMounts:
            - name: data
              mountPath: /data
      imagePullSecrets:
        - name: ghcr
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
        storageClassName: do-block-storage
