k8s/solid-crs/solid-crs-semcom-node-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solid-crs-semcom-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solid-crs-semcom-node
  template:
    metadata:
      labels:
        app: solid-crs-semcom-node
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/solid-crs-semcom-node
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr
