k8s/solid-crs/solid-crs-id-proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: solid-crs-id-proxy
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: solid-crs-id-proxy
