k8s/solid-crs/solid-crs-semcom-components-service.yml
apiVersion: v1
kind: Service
metadata:
  name: solid-crs-semcom-components
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: solid-crs-semcom-components
