k8s/solid-crs/solid-crs-manage-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solid-crs-manage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - solid-crs.netwerkdigitaalerfgoed.nl
      secretName: solid-crs
  rules:
    - host: solid-crs.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solid-crs-manage
                port:
                  number: 80
