k8s/solid-crs/solid-crs-semcom-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solid-crs-semcom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: solid-crs.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /semcom(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: solid-crs-semcom-node
                port:
                  number: 80
          - path: /semcom-components(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: solid-crs-semcom-components
                port:
                  number: 80
